--- a/web/testApiJS.html
+++ b/web/testApiJS.html
@@ -41,10 +41,7 @@ and open the template in the editor.
             
             function sendRequest() {
                 var url = "mechaInfo.jsp";
-                var sortType = my$("sortOptions").options[my$("sortOptions").
-                        selectedIndex].value;
-                LOG(sortType);
-                url += "?q=" + my$("nameBox").value + "_?s=" + sortType;
+                url += "?q=" + my$("nameBox").value;
                 httpReq.open("GET", url);
                 httpReq.onreadystatechange = handleResponse;
                 httpReq.send(null);
@@ -53,6 +50,7 @@ and open the template in the editor.
             
             function handleResponse(){
                 var imageTable = my$("mechaTable");
+                imageTable.innerHTML = "";
                 if(httpReq.readyState === 4 && httpReq.status === 200){
                     LOG("ready");
                     var outputText = "";
@@ -79,7 +77,7 @@ and open the template in the editor.
                             mechaIMGContainer.style.width = "250px";
                             mechaIMGContainer.style.height = "50%";
 
-                            mechaName.innerHTML = obj.recordList[i].mechaDescriptor;
+                            mechaName.innerHTML = obj.recordList[i].mechaName;
                         }
                     }
                     my$("data").innerHTML = outputText;
@@ -90,13 +88,6 @@ and open the template in the editor.
     <body>
         <input type="text" id="nameBox" value="" size="30" />
         <input type="button" value="Search mecha name" onClick="javascript:sendRequest()"/><br/>
-        <span>Choose sort type:</span>
-        <select id="sortOptions">
-            <option value="mechaDescriptor">mechaDescriptor</option>
-            <option value="mechaName">      mechaName</option>
-            <option value="mechaHeight">    mechaHeight</option>
-            <option value="mechaTable_ID">  mechaTable_ID</option>
-        </select>
         <div id="data"></div>
         <table id="mechaTable">
         </table>
