--- a/web/testApiJS.html
+++ b/web/testApiJS.html
@@ -6,20 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <style>
-            #mechaTable{
-                border: 1px solid black;
-            }
-            
-            th, td {
-                border: 1px solid black;
-            }
-            
-            div{
-                margin: auto;
-                width: 70%;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="apiCSS.css">
         <title>mechaDB</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,34 +49,45 @@ and open the template in the editor.
                     if(obj.dbError.length > 0){console.log(obj.dbError);}
                     if(obj.recordList === null){console.log("Recordlist DNE.");}
                     if(obj.recordList.length === 0){
-                        outputText = "Nothing mathched your query.";
+                        imageTable.innerHTML = "Your query did not match any names.";
                     }else{
+                        imageTable.appendChild(document.createElement("th")).
+                                innerHTML = "Mecha Name";
+                        imageTable.appendChild(document.createElement("th")).
+                                innerHTML = "Mecha Descriptor";
+                        imageTable.appendChild(document.createElement("th")).
+                                innerHTML = "Mecha Table ID";
+                        imageTable.appendChild(document.createElement("th")).
+                                innerHTML = "Mecha Height";
+                        imageTable.appendChild(document.createElement("th")).
+                                innerHTML = "Mecha Image";
                         for(var i = 0; i < obj.recordList.length; i++){
                             var mechaRow = document.createElement("tr");
-                            var mechaName = document.createElement("td");
-                            var mechaIMG = document.createElement("td");
-                            var mechaIMGContainer = document.createElement("img");
-                            mechaIMGContainer.src = obj.recordList[i].mechaURL;
-                            mechaRow.appendChild(mechaName);
-                            mechaIMG.appendChild(mechaIMGContainer);
-                            mechaRow.appendChild(mechaIMG);
+                            mechaRow.appendChild(document.createElement("td")).
+                                    innerHTML = obj.recordList[i].mechaName;
+                            mechaRow.appendChild(document.createElement("td")).
+                                    innerHTML = obj.recordList[i].mechaDescriptor;
+                            mechaRow.appendChild(document.createElement("td")).
+                                    innerHTML = obj.recordList[i].mechaTable_ID;
+                            mechaRow.appendChild(document.createElement("td")).
+                                    innerHTML = obj.recordList[i].mechaHeight;
+                            mechaRow.appendChild(document.createElement("td").
+                                    appendChild(document.createElement("img"))).
+                                    src = obj.recordList[i].mechaURL;
                             imageTable.appendChild(mechaRow);
-                            mechaIMGContainer.style.width = "250px";
-                            mechaIMGContainer.style.height = "50%";
-
-                            mechaName.innerHTML = obj.recordList[i].mechaName;
                         }
                     }
-                    my$("data").innerHTML = outputText;
                 }
             }
         </script>
     </head>
     <body>
+        <div id="inputDIV">Enter mecha name to start searching:
         <input type="text" id="nameBox" value="" size="30" />
         <input type="button" value="Search mecha name" onClick="javascript:sendRequest()"/><br/>
-        <div id="data"></div>
-        <table id="mechaTable">
-        </table>
+        </div>
+        <div id="data">
+            <table id="mechaTable"></table>
+        </div>
     </body>
 </html>
