--- a/web/testApiJq.html
+++ b/web/testApiJq.html
@@ -25,17 +25,23 @@ and open the template in the editor.
             }
             $(document).ready(function()
             {
+                $('#searchBy').change(function() {
+                    LOG("function called");
+                    $('#searchText').text("Enter " + $('#searchBy option:selected').text() +
+                            " to start searching:");
+                    $('#getButton').prop('value' , "Search " + $('#searchBy option:selected').text());
+                });
+                
                 $('#getButton').click(function(){
-                    $("#data > table > tr").empty();
+                    $("#data").empty();
                     var url = "mechaInfo.jsp";
-                    url += "?q=" + $("#nameBox").val() + "&s=" + "mechaHeight";
+                    url += "?q=" + $("#nameBox").val() + "&s=" + $('#searchBy').val();
                     LOG(url);
                     ajaxSuccess = function (response){
                         LOG("Success");
                         var obj = eval(response);
                         var tableString = "<table>";
                         if(obj.recordList.length === 0){
-                            $("#data").empty();
                             $("#data").append("Your query did not match any names.");
                         }
                         else{
@@ -64,7 +70,7 @@ and open the template in the editor.
                             cache: false,
                             url: url,
                             dataType: "json",
-                            timeout: 5000,
+                            timeout: 10000,
                             success: ajaxSuccess,
                             error: ajaxFailure
                         });
@@ -74,8 +80,15 @@ and open the template in the editor.
         </script>
     </head>
     <body>
-        <div id="inputDIV">Enter mecha name to start searching:
-        <input type="text" id="nameBox" value="" size="30" />
+        <div id="inputDIV"><span id="searchText">Enter mecha name to start searching:</span>
+        <input type="text" id="nameBox" value="" size="30" /><br/>
+        Search by:
+        <select id="searchBy">
+            <option value="mechaName">Mecha Name</option>
+            <option value="mechaDescriptor">Mecha Descriptor</option>
+            <option value="mechaTable_ID">Mecha ID</option>
+            <option value="mechaHeight">Mecha Height</option>
+        </select> <br/>
         <input type="button" value="Search mecha name" id="getButton"/><br/>
         </div>
         <div id="data"></div>
